--- a/styleChat.css
+++ b/styleChat.css
@@ -10,6 +10,10 @@ h1{
     color:  rgb(21, 69, 71);
 }
 
+#campoCorreo{
+    display: none;
+}
+
 #imgForm{
     width: 150px; 
     height: 100px; 
